# ai-experiments

./: .gitignore  CNAME  README.md  _quarto-production.yml  _quarto.yml  about.qmd  change_future_posts_to_draft.py  generate_social_media_cards.py  index.qmd  pyproject.toml  qblog.py  qblog2.py  screenshot.sh  styles.css
.devcontainer/: devcontainer.json
.github/workflows/: static.yml
.quarto/idx/: about.qmd.json  index.qmd.json
.quarto/xref/: INDEX
_site/: about.html  blog.html  index.html  listings.json  search.json  styles.css
_site/posts/: index.html  index.qmd
_templates/: blog-items.ejs  blog.html
favicon/: site.webmanifest
posts/: _metadata.yml  index.qmd  template.html  title-block.html  title-metadata.html
posts/11-feb-2024-pew-research-ai/: index.ipynb
posts/12-jan-2025-auto-link-blog/: index.ipynb
posts/15-jan-2024-titanic/: index.ipynb
posts/2025-01-19-playing-with-embeddings/: index.ipynb
posts/2025-01-25-comparing-embedding-models/: index.ipynb
posts/2025-01-26-comparing-embedding-models/: index.ipynb
posts/2025-01-26-running-an-ai-chat-on-your-mac/: index.ipynb
posts/2025-01-26-running-hugging-face-models-in-ollama/: index.ipynb
posts/2025-01-29-chat-with-deepseek-on-your-mac/: index.ipynb
posts/2025-01-29-running-an-ai-chat-on-your-mac/: index.ipynb
posts/2025-02-01-chat-with-deepseek-on-your-mac/: index.ipynb
posts/2025-02-03-deepseek-32bn/: index.ipynb
posts/2025-02-03-deepseek-vs-llama/: index.ipynb
posts/2025-02-03-running-an-ai-chat-on-your-mac/: index.ipynb
posts/2025-02-09-llm-app-to-search-through-pdf-documents/: index.ipynb
summaries/: summary_2025-01-04.ipynb
(+39 files in other folders)
