[project]
name = "ai-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.10.0",
    "great-tables>=0.15.0",
    "jinja2>=3.1.5",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-ollama>=0.2.2",
    "langchain-openai>=0.3.3",
    "llama-index>=0.12.10",
    "llama-index-embeddings-langchain>=0.3.0",
    "llama-index-llms-ollama>=0.5.0",
    "llm>=0.20",
    "nbformat>=5.10.4",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "shot-scraper>=1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
